kubernetes/apps/podinfo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo-test
  namespace: podinfo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: podinfo-test
  template:
    metadata:
      labels:
        app: podinfo-test
    spec:
      containers:
      - name: podinfo
        image: ghcr.io/stefanprodan/podinfo:latest
        ports:
        - containerPort: 9898
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
